--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
-spring.profiles.include=website
+spring.profiles.include=website,sqlite
