--- a/src/main/resources/application-sqlite.properties
+++ b/src/main/resources/application-sqlite.properties
@@ -6,5 +6,5 @@ spring.datasource.url=jdbc:sqlite:dbs/sqlite/jmb.db
 #spring.sql.init.mode=always
 
 mybatis.type-aliases-package=top.b0x0.jmb.common.pojo
-mybatis.config-location=top.b0x0.jmb.mapper.xml/**.xml
+mybatis.mapper-locations=classpath*:top/b0x0/jmb/mapper/xml/**.xml
 mybatis.configuration.map-underscore-to-camel-case=true
