--- a/config/application-website.properties
+++ b/config/application-website.properties
@@ -1,4 +1,11 @@
 website.markdown-dir=d:/website/md
 website.index-dir=d:/website/index
 
+website.cookie.time=864000
+
 comment.default.avatar=default/images/avatar.png
+image.upload.base-url=d:/website/upload/image
+
+github.client-id=Iv1.5f8c132f227f383c
+github.client-secret=755c85b587ee2734cf59572768bdd623da0b61ea
+github.callback=http://xiongsihao.com/github/callback
