--- a/src/main/resources/application-sqlite.yml
+++ b/src/main/resources/application-sqlite.yml
@@ -1,8 +1,8 @@
 mybatis:
     configuration:
         map-underscore-to-camel-case: true
-    mapper-locations: classpath*:top/b0x0/jmb/mapper/xml/**.xml
-    type-aliases-package: top.b0x0.jmb.common.pojo
+    mapper-locations: classpath*:com/github/wulilinghan/jmb/mapper/xml/**.xml
+    type-aliases-package: com.github.wulilinghan.jmb.common.pojo
 spring:
     datasource:
         url: jdbc:sqlite:dbs/sqlite/jmb.db
