--- a/src/main/resources/application-website.yml
+++ b/src/main/resources/application-website.yml
@@ -12,4 +12,4 @@ website:
     cookie:
         time: 864000
     index-dir: d:/website/index
-    markdown-dir: d:/website/md
+    markdown-dir: D:\work-space\github\assets\markdown-articles
