fix: 修复文章评论重复问题，以及回复后评论未局部刷新问题

--- a/src/main/resources/application-sqlite.yml
+++ b/src/main/resources/application-sqlite.yml
@@ -1,5 +1,6 @@
 mybatis:
     configuration:
+        log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
         map-underscore-to-camel-case: true
     mapper-locations: classpath*:com/github/wulilinghan/jmb/mapper/xml/**.xml
     type-aliases-package: com.github.wulilinghan.jmb.common.pojo
