feat: 支持maven进行docker镜像构建

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,14 +1,15 @@
 # 该镜像需要依赖的基础镜像
+#FROM openjdk:8u322-jdk
+#FROM openjdk:17
 FROM eclipse-temurin:17-jdk-alpine
 # 指定维护者的名字
-MAINTAINER lixundu
-# docker命令执行目录
+MAINTAINER lixundu<1902325071@qq.com>
+# 设置匿名卷
+VOLUME /data
+# 进入容器内的默认目录
 WORKDIR /website
-#用来定义容器运行时可以挂在到宿主机的目录
-#VOLUME   /website
-# 将当前目录下的jar包复制到docker容器的/website目录下
+# 复制指定目录或文件到docker容器的/website目录下(原目录或文件没层级就是当前目录)
 ADD app.jar /website/app.jar
-# 将当前目录下的jconf文件夹复制到docker容器的/website目录下
 ADD conf   /website/conf
 # 声明需要暴露的端口
 EXPOSE 6060
