--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -36,12 +36,12 @@ website:
   # 博主
   author: "wulilinghan"
   #authorAvatar: "https://cn.gravatar.com/userimage/176875695/30e6f4fb8ae8b9eef75989ac24806248.png"
-  authorAvatar: "https://imgse.com/i/pS6EyGR"
+  authorAvatar: "https://i.328888.xyz/2023/02/05/NPvYP.jpeg"
   # 网站
   webSiteTittle: "wuliling's 博客"
   webSiteDescription: "一个用Java写的Markdown博客"
-  webSiteLogo: "https://imgur.com/a/OuIa9eS"
-  webSiteIcon: "https://imgse.com/i/pS6QTJO"
+  webSiteLogo: "https://i.328888.xyz/2023/02/05/NPLMJ.png"
+  webSiteIcon:
   footer:
     icp:                # 例如：粤公网安备 123456789号
     poweredBy: "java-markdown-blog"
@@ -54,7 +54,7 @@ website:
     repo:
     clientId:
     secret:
-  plugin-player: "true"  # 是否开启网易云播放器
+  plugin-player: "false"  # 是否开启网易云播放器
   plugin-player-type: "neteasePlayer"   # 网易云播放器插件，有两种  netEasy-music ，neteasePlayer
 
 
