--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,8 +3,8 @@ mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
-  mapper-locations: classpath*:com/github/wulilinghan/jmb/mapper/xml/**.xml
-  type-aliases-package: com.github.wulilinghan.jmb.common.pojo
+  mapper-locations: classpath*:io/github/tlh/jmb/mapper/xml/**.xml
+  type-aliases-package: io.github.tlh.jmb.common.pojo
 spring:
   datasource:
     url: jdbc:sqlite:sqlite/jmb.db
@@ -29,6 +29,7 @@ image:
   upload:
     base-url: d:/website/upload/image
 website:
+  theme: "simple"  # 主题 default,simple
   indexDir: d:/website/index
   markdownDir: D:\work-space\github\assets\markdown-articles
   cookie:
