--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -29,7 +29,7 @@ image:
     base-url: /website/upload/image
 website:
   theme:
-    active: "default"  # 主题 default,simple
+    active: "simple"  # 主题 default,simple
     default-theme:
       plugin-player: "true"  # 是否开启网易云播放器
       plugin-player-type: "netEasy-music"   # 网易云播放器插件，有两种  netEasy-music ，neteasePlayer
@@ -40,21 +40,24 @@ website:
     simple-theme:
       github: "https://github.com/wulilinghan"
       twitter: "https://twitter.com/isvling"
-  indexDir: /website/index
-  markdownDir: /website/markdown-articles
+  index-dir: /website/index
+  markdown-dir: /website/markdown-articles
   cookie:
     time: 864000
-  webSiteTittle: "wuliling's 博客"
-  webSiteDescription: "一个用Java写的Markdown博客"
-  webSiteLogo: "https://i.328888.xyz/2023/02/05/NPLMJ.png"
-  webSiteIcon:
+  # 博主
   author: "wulilinghan"
   #authorAvatar: "https://cn.gravatar.com/userimage/176875695/30e6f4fb8ae8b9eef75989ac24806248.png"
-  authorAvatar: "https://i.328888.xyz/2023/02/05/NPvYP.jpeg"
+  author-avatar: "https://i.328888.xyz/2023/02/05/NPvYP.jpeg"
+  # 网站
+  web-site-tittle: "wuliling's 博客"
+  web-site-description: "一个用Java写的Markdown博客"
+  web-site-logo: "https://i.328888.xyz/2023/02/05/NPLMJ.png"
+  web-site-icon:
   footer:
     icp:            # 例如：粤公网安备 123456789号
-    poweredBy: "java-markdown-blog"
-    poweredByUrl: "https://github.com/wulilinghan/java-markdown-blog"
+    powered-by: "java-markdown-blog"
+    powered-by-url: "https://github.com/wulilinghan/java-markdown-blog"
+  # 评论 gitTalk未开发
   gitTalk:
     enable:
     owner:
